deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: npm-service
spec:
  selector:
    app: npm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 81
      targetPort: 81
      name: admin-ui
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
  type: ClusterIP
